-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11-shenandoah, 13, 14
-
Component/s: hotspot
-
b08
Shenandoah does need to implement this method to prevent leaking from-space oops to the system when weak roots are evacuated in concurrent phase.
- causes
-
JDK-8376717 Shenandoah: Improve native jobject resolve GC state check
-
- Open
-
- relates to
-
JDK-8233232 AArch64: Shenandoah: jni_fast_GetLongField is broken
-
- Resolved
-