8228532: Shenandoah: Implement SBSA::try_resolve_jobject_in_native()

Reviewed-by: rkennke